package com.pattern;

public interface AbstractDuckFactory {

    Quackable createMallardDuck();
    Quackable createRedheadDuck();
    Quackable createDuckCall();
    Quackable createRubberDuck();
}
